# stormlight

stormlight-backend/: .env  pyproject.toml
stormlight-backend/app/: main.py
stormlight-frontend/: .env  index.html  package-lock.json  package.json
stormlight-frontend/src/: App.tsx
stormlight-frontend/src/components/: Navbar.tsx
stormlight-frontend/src/contexts/: AuthContext.tsx
stormlight-frontend/src/pages/: CompetitionDetail.tsx  Competitions.tsx  Hiscores.tsx  Home.tsx  Login.tsx  Members.tsx  PlayerProfile.tsx
stormlight-frontend/src/utils/: gradientUtils.ts  skillIcons.ts
